client/src/SortingViz/SortingViz.css
body {
  background-color:  rgb(8, 8, 60);
}

.algo-container {
  display: flex;
  flex-direction: column;
  padding: 20px;
  max-width: 95vw;
  max-height: 100vh / 1.5;
  /* border: 10px; */
  border-radius: 5pt;
  /* stroke: black; */
  /* stroke-width: 2pt; */
  background-color: rgb(48, 67, 67);
  margin: auto;
  margin-top: 9px;
  /* margin-right: 50px */
}

.array-container {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  justify-items: center;

}

.buttons {
  display: flex;
  justify-content: center;
  align-items: auto;
  margin-top: 20px;
}

button {
  font-size: 16pt;
  justify-self: space-between;
  border: 3px;
  border-radius: 3px;
  border-color: orangered;
  height: 30px;
  width: auto;
  margin: 20px;
}

button:hover {
  background-color: peachpuff;
}

